@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-12T01:20:07Z",
-  "count_outdated" : 326,
-  "uniques_outdated" : 183,
+  "timestamp" : "2022-06-12T08:17:12Z",
+  "count_outdated" : 327,
+  "uniques_outdated" : 184,
   "count" : 354,
   "uniques" : 202,
   "clones" : [
-    {
-      "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
